docs(perf): record five-path benchmarks and ten-minute soak